# WorkZone

./: .gitignore  AI_INTERVIEW_IMPLEMENTATION_SUMMARY.md  AI_INTERVIEW_WEBSOCKET_README.md  Makefile  README.md  REDIS_QUICK_REFERENCE.md  REDIS_STORAGE_ANALYSIS.md  RULES.md  compose.yaml  docker-compose.yml  openapi-generation-log.txt  openapi-summary.md  openapi.yaml
server/: .dockerignore  .gitignore  CODE_REVIEW.md  DEVELOPER_ASSESSMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INVITATION_API.md  ISSUES_AND_FIXES.md  README.md  REVIEW_README.md  VISUAL_SUMMARY.md  alembic.ini  alembic_tenant.ini  main.py  openapi.yaml  pyproject.toml
server/alembic/: README  env.py
server/alembic/versions/: a0015f1f140e_create_users_and_client_table.py  abc4bc2f6b9f_initial_public_schema.py  b0025f2f150f_create_ai_interviews_table.py  b1234567890a_add_invitation_table.py
server/alembic/versions/public/: 4dad8be5fd82_remove_chroma_db_from_setting.py  5e34efc97233_public_add_settings.py
server/alembic/versions/tenant/: 163fc26c0299_add_leave_entitlement.py  722c4b1c3044_initial_baseline.py  b1284b9e6133_add_query_table.py  cb26116d897a_add_new_table.py
server/alembic_tenant/: README  env.py
server/alembic_tenant/versions/: e47ea26f19e3_initial_tenant_schema.py
server/core/: config.py  logger.py
server/db/: __init__.py  database.py
server/db/repository/: client.py  user.py
server/genai/resume_ranking/: keyword_extractor.py  main.py  ranker.py  section_parser.py
server/models/: __init__.py  applicant.py  client.py  employee.py  manager.py  recruiter.py  user.py
server/routes/: signup.py
server/schemas/: __init__.py  client.py
server/scripts/: migrate.sh  tenant_migrate.py
server/src/: main.py  openapi.py
server/src/core/: celery.py  config.py  context.py  database.py  di.py  http_client.py  logger.py  payment.py  redis.py  security.py  storage.py
server/src/exceptions/: base.py  platform.py  tenant.py
server/src/genai/: __init__.py  http_client.py  llm_client.py
server/src/genai/communication/: query_classifier.py
server/src/genai/doc_generator/: main.py
server/src/genai/hr_interview/: .gitignore  answer_analyzer.py  main.py  pdf_processor.py  pdf_report_generator.py  pyproject.toml  question_generator.py  report_generator.py  stt_engine.py  text_cleaner.py  tts_engine.py  websocket_service.py
server/src/genai/hr_policy/: __init__.py  context_manager.py  document_processor.py  main.py  personalization.py  rag_engine.py  suggestions_generator.py  vector_store.py
server/src/genai/jd_builder/: main.py
server/src/genai/personalized_learning/: main.py
server/src/genai/resume_ranking/: keyword_extractor.py  main.py  ranker.py  section_parser.py  text_extractor.py
server/src/genai/schemas/: __init__.py  ai_interview_ws_schemas.py  doc_generator_schemas.py  hr_interview.py  hr_interview_schemas.py  hr_policy.py  jd_builder_schemas.py  personalized_learning.py  query_classifier.py  resume_ranking_schemas.py
server/src/genai/utils/: download_blob.py  text_extractor.py
server/src/models/platform/: __init__.py  client.py  invitation.py  order.py  setting.py
server/src/models/tenant/: __init__.py  ai_interview.py  applicant.py  application.py  (+9 more)
server/src/tasks/: __init__.py  domain.py  email.py  job.py  leave.py  policy.py  tenant.py
server/src/utils/: constants.py  datetime.py  hashing.py  misc.py
(+371 files in other folders)
