[project]
name = "WorkZone"
version = "0.1.0"
description = "WorkZone.tech APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.118.0",
    "google-cloud-storage>=3.4.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "razorpay>=2.0.0",
    "sqlalchemy>=2.0.43",
    "tldextract>=5.3.0",
    "uvicorn>=0.37.0",
]
