[project]
name = "WorkZone"
version = "0.1.0"
description = "WorkZone.tech APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.118.0",
    "google-cloud-storage>=3.4.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "razorpay>=2.0.0",
    "sqlalchemy>=2.0.43",
    "tldextract>=5.3.0",
    "uvicorn[standard]>=0.37.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "spacy>=3.8.7",
    "yake>=0.6.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.3",
    "PyPDF2>=3.0.0",
    "google-cloud-texttospeech>=2.14.0",
    "google-cloud-speech>=2.21.0",
    "reportlab>=4.0.0",
    "pdf2image>=1.16.3",
    "pydub>=0.25.1",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
]

