[project]
name = "hr_interview"
version = "0.1.0"
description = "Hr interview assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.0",
    "google-cloud-texttospeech>=2.14.0",
    "google-cloud-speech>=2.21.0",
    "google-cloud-aiplatform>=1.38.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3"
]

[tool.setuptools]
packages = ["functions"]